--- a/index.html
+++ b/index.html
@@ -301,17 +301,17 @@
     <div class="fixed-top">
       <div class="container navbar">
         <div class="logo">
-          <a href="/" data-i18n="nav.logo">FilterGame</a>
+          <a href="/FilterGameWeb/" data-i18n="nav.logo">FilterGame</a>
         </div>
 		        <div class="logo">
-          <a href="/">　</a>
+          <a href="/FilterGameWeb/">　</a>
         </div>
 
         <nav class="nav-items">
           <div class="dropdown">
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
-              <a href="/" data-i18n="nav.home.item1">首頁</a>
+              <a href="/FilterGameWeb/" data-i18n="nav.home.item1">首頁</a>
             </div>
           </div>
           <div class="dropdown">
