--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title data-i18n="siteTitle">FilterGame | Steam Game Dev . AirBoost Airship Knight </title>
     <meta name="description" content="FilterGame IndieGame Dev Site" data-i18n="[content]metaDescription" />
 	<meta property="og:title" content="FilterGame｜台灣獨立遊戲開發!">
-	<meta property="og:description" content="AirBoost:天空機士由 FilterGame 出品，Steam少女像素風格橫向動作遊戲！">
+	<meta property="og:description" content="正在開發Steam遊戲 AirBoost:天空機士 ,Steam少女像素風格橫向動作遊戲！">
 	<meta property="og:image" content="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2325390/header.jpg">
 	<meta property="og:url" content="https://filtergame.github.io/FilterGameWeb/">
 	<meta property="og:type" content="website">
