--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -47,7 +47,7 @@
           <div class="dropdown">
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
-              <a href="/FilterGameWeb/" data-i18n="nav.home.item1">首頁</a>
+              <a href="/" data-i18n="nav.home.item1">首頁</a>
             </div>
           </div>
           <div class="dropdown">
@@ -59,7 +59,7 @@
           <div class="dropdown">
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
-              <a href="https://filtergame.github.io/IndieGameWebTW/" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
+              <a href="/IndieGameTW/IndieGameTW.html" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
             </div>
           </div>
