--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <div class="dropdown">
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
-              <a href="/FilterGameWeb/" data-i18n="nav.home.item1">首頁</a>
+              <a href="/" data-i18n="nav.home.item1">首頁</a>
             </div>
           </div>
           <div class="dropdown">
@@ -329,7 +329,7 @@
           <div class="dropdown">
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
-              <a href="/FilterGameWeb/IndieGameTW/IndieGameTW.html" data-i18n="nav.planning.item1">IndieGameWebTW</a>
+              <a href="/IndieGameTW/IndieGameTW.html" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
             </div>
           </div>
