--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -37,10 +37,10 @@
     <div class="fixed-top">
       <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
         <div class="logo">
-          <a href="/FilterGameWeb/" data-i18n="nav.logo">FilterGame</a>
+          <a href="/" data-i18n="nav.logo">FilterGame</a>
         </div>
 		        <div class="logo">
-          <a href="/FilterGameWeb/">　</a>
+          <a href="/">　</a>
         </div>
 
         <nav class="nav-items">
