--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -179,7 +179,7 @@
 	  </main>
 
 	  <!-- 引入純 JS 邏輯 -->
-	  <script src="script.js"></script>
+	  <script src="New.js"></script>
 
     <!-- 將彈幕容器移至 body 固定定位 -->
     <div
