--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -176,6 +176,13 @@
 	  <main class="container mx-auto px-4 py-8">
 		<h1 class="text-3xl font-bold mb-8 text-center">近期台灣遊戲發售時間軸</h1>
 		<div id="timeline-container" class="max-w-5xl mx-auto"></div>
+		
+			  <!-- ==== 新增以下 ==== -->
+	  <section class="max-w-7xl mx-auto px-4 py-8">
+		<h2 class="text-3xl font-bold mb-6">未發售關注列表</h2>
+		<div id="unreleased-container" class="max-w-5xl mx-auto"></div>
+	  </section>
+
 	  </main>
 
 	  <!-- 引入純 JS 邏輯 -->
