--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -107,14 +107,24 @@
     <!-- 為固定頂部導覽留出空間 -->
     <div style="height: 60px;"></div>
 
-
-
-
     <!-- CSV 按鈕區 -->
     <div
       id="csv-buttons"
       class="max-w-7xl mx-auto px-4 py-2 flex flex-col md:flex-row gap-4 md:space-x-4 md:sticky md:top-14 z-50"
     >
+	
+		<a
+		  href="New.html"
+		  class="csv-btn"
+		  data-navtext
+		  data-en="[New]Recent Taiwan Steam Release Timeline"
+		  data-zh="[New]近期台灣遊戲發售-時間軸"
+		  data-ja="最近の台湾Steamリリーススケジュール"
+		>
+		  [New]近期台灣遊戲發售-時間軸
+		</a>
+
+	
       <button
         class="csv-btn"
         data-csv="cards2.csv"
@@ -147,18 +157,6 @@
         data-ja="海外パートナーSteamリスト"
       >
         海外友商steam列表
-      </button>
-	          <button
-        class="csv-btn"
-        data-csv="cards_tigs_tw.csv"
-        data-random="true"
-        data-navtext
-        data-en="[New]Tokyo IndieGames Summit 2025- Taiwan Games"
-        data-zh="[New]Tokyo IndieGames Summit 2025-台灣遊戲列表"
-        data-ja="[New]Tokyo IndieGames Summit 2025- 台湾ゲーム一覧"
-      >
-        [New]Tokyo IndieGames Summit 2025-台灣遊戲列表
-      </button>
 
       <button
         class="csv-btn"
