--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -115,61 +115,19 @@
       id="csv-buttons"
       class="max-w-7xl mx-auto px-4 py-2 flex flex-col md:flex-row gap-4 md:space-x-4 md:sticky md:top-14 z-50"
     >
-      <button
-        class="csv-btn"
-        data-csv="cards2.csv"
-        data-random="true"
-        data-navtext
-        data-en="Taiwan Domestic Steam Games - In Development"
-        data-zh="台灣國產steam遊戲-研發中列表"
-        data-ja="台湾国内Steamゲーム - 開発中リスト"
-      >
-        台灣國產steam遊戲-研發中列表
-      </button>
-      <button
-        class="csv-btn"
-        data-csv="cards4.csv"
-        data-random="true"
-        data-navtext
-        data-en="Taiwanese Steam Games - Released List (Feel free to add more!)"
-        data-zh="台灣國產steam遊戲-已發售列表(歡迎補充)"
-        data-ja="台湾産Steamゲーム - 発売済みリスト（追加歓迎！）"
-      >
-        台灣國產steam遊戲-已發售列表(歡迎補充)
-      </button>
-      <button
-        class="csv-btn"
-        data-csv="cards3.csv"
-        data-random="true"
-        data-navtext
-        data-en="Overseas Partner Steam List"
-        data-zh="海外友商steam列表"
-        data-ja="海外パートナーSteamリスト"
-      >
-        海外友商steam列表
-      </button>
-	          <button
-        class="csv-btn"
-        data-csv="cards_tigs_tw.csv"
-        data-random="true"
-        data-navtext
-        data-en="[New]Tokyo IndieGames Summit 2025- Taiwan Games"
-        data-zh="[New]Tokyo IndieGames Summit 2025-台灣遊戲列表"
-        data-ja="[New]Tokyo IndieGames Summit 2025- 台湾ゲーム一覧"
-      >
-        [New]Tokyo IndieGames Summit 2025-台灣遊戲列表
-      </button>
 
-      <button
-        class="csv-btn"
-        data-csv="cards.csv"
-        data-navtext
-        data-en="2025 Taipei Game Show - Taiwan Games"
-        data-zh="2025台北電玩展-台灣遊戲列表"
-        data-ja="2025台ペイゲームショー - 台湾ゲーム一覧"
-      >
-        2025台北電玩展-台灣遊戲列表
-      </button>
+	<a
+	  href="IndieGameTW.html"
+	  class="csv-btn"
+	  data-csv="cards3.csv"
+	  data-random="true"
+	  data-navtext
+	  data-en="Overseas Partner Steam List"
+	  data-zh="海外友商steam列表"
+	  data-ja="海外パートナーSteamリスト"
+	>
+	  IndieGameTW-台灣遊戲列表
+	</a>
 
     </div>
 
