--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -8,9 +8,9 @@
 	<meta name="description" content="IndieGameWebTW | FilterGame IndieGame Dev Site"/>
 
 	<meta property="og:title" content="IndieGameWebTW | 台灣Steam獨立遊戲列表!">
-	<meta property="og:description" content="IndieGameWebTW | 由FilterGame維護的 台灣獨立遊戲列表!">
+	<meta property="og:description" content="IndieGameWebTW | 由FilterGame維護的 台灣獨立遊戲列表! 台灣steam遊戲列表!">
 	<meta property="og:image" content="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/2325390/header.jpg">
-	<meta property="og:url" content="https://filtergame.github.io/FilterGameWeb/">
+	<meta property="og:url" content="https://filtergame.com/">
 	<meta property="og:type" content="website">
 
 
