--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -37,10 +37,10 @@
     <div class="fixed-top">
       <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
         <div class="logo">
-          <a href="/" data-i18n="nav.logo">FilterGame</a>
+          <a href="https://filtergame.com/" data-i18n="nav.logo">FilterGame</a>
         </div>
 		        <div class="logo">
-          <a href="/">　</a>
+          <a href="https://filtergame.com/">　</a>
         </div>
 
         <nav class="nav-items">
@@ -48,6 +48,8 @@
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
               <a href="/" data-i18n="nav.home.item1">首頁</a>
+  			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
+   			  <a href="https://x.com/FilterGame_Dev" >Twitter(X)</a>
             </div>
           </div>
           <div class="dropdown">
@@ -61,6 +63,7 @@
             <div class="dropdown-content">
               <a href="/IndieGameTW/IndieGameTW.html" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
+  			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
             </div>
           </div>
 		  
