--- a/index.html
+++ b/index.html
@@ -307,17 +307,19 @@
     <div class="fixed-top">
       <div class="container navbar">
         <div class="logo">
-          <a href="/FilterGameWeb/" data-i18n="nav.logo">FilterGame</a>
+          <a href="https://filtergame.com/" data-i18n="nav.logo">FilterGame</a>
         </div>
 		        <div class="logo">
-          <a href="/FilterGameWeb/">　</a>
+          <a href="https://filtergame.com/">　</a>
         </div>
 
         <nav class="nav-items">
           <div class="dropdown">
             <button data-i18n="nav.home.title"> 首頁 ▼</button>
             <div class="dropdown-content">
-              <a href="/" data-i18n="nav.home.item1">首頁</a>
+              <a href="https://filtergame.com/" data-i18n="nav.home.item1">首頁</a>
+   			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
+   			  <a href="https://x.com/FilterGame_Dev" >Twitter(X)</a>
             </div>
           </div>
           <div class="dropdown">
@@ -331,6 +333,7 @@
             <div class="dropdown-content">
               <a href="/IndieGameTW/IndieGameTW.html" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
+   			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
             </div>
           </div>
 		  <!--
