--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
               <a href="/IndieGameTW/IndieGameTW.html" data-i18n="nav.planning.item1">IndieGameWebTW</a>
-              <a href="https://filtergame.github.io/IndieGameWebTW/GameExpo" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
+              <a href="https://gameexpo.filtergame.com/" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
    			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
             </div>
           </div>
