--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -80,7 +80,7 @@
             <div class="dropdown-content">
               <a href="https://forms.gle/GLXSFuxTDkaQ6MLEA" target="_blank" data-i18n="nav.add.item1">註冊你的steam遊戲</a>
               <a href="https://forms.gle/o8EyAosyxytMJBhJ7" target="_blank" data-i18n="nav.add.item2">投稿彈慕訊息</a>
-			  <a href="https://discord.gg/xQaCPAbe" target="_blank" >Dicsord</a>
+			  <a href="https://discord.gg/ENVdsZSn3z" target="_blank" >Dicsord</a>
 			  
             </div>
           </div>
