--- a/WishWall/index.html
+++ b/WishWall/index.html
@@ -31,7 +31,7 @@
 </head>
 <body class="min-h-screen bg-slate-50 dark:bg-slate-900 p-4">
     <main>
-        <h1 class="text-3xl font-bold text-center mb-8 text-slate-800 dark:text-slate-100">短文分享墙</h1>
+        <h1 class="text-3xl font-bold text-center mb-8 text-slate-800 dark:text-slate-100">台灣ACG創作者-2025生存確認貼文牆</h1>
         <div id="posts-container-wrapper" class="relative min-h-[calc(100vh-100px)]">
             <!-- Posts will be injected here -->
         </div>
