--- a/IndieGameTW/New.html
+++ b/IndieGameTW/New.html
@@ -62,7 +62,7 @@
             <button data-i18n="nav.planning.title">企劃&宣傳 ▼</button>
             <div class="dropdown-content">
               <a href="/IndieGameTW/IndieGameTW.html" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
-              <a href="https://gameexpo.filtergame.com/" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
+              <a href="https://eaigc.filtergame.com/" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
   			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
             </div>
           </div>
