--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -64,6 +64,7 @@
               <a href="/IndieGameTW/IndieGameTW.html" target="_blank" data-i18n="nav.planning.item1">IndieGameWebTW</a>
               <a href="https://eaigc.filtergame.com/" target="_blank" data-i18n="nav.planning.item2">東亞遊戲特賣2025</a>
   			  <a href="https://www.youtube.com/@FilterGameDev" >Youtube</a>
+  			  <a href="https://filtergame.com/WishWall/" >2025創作者生存確認</a>
             </div>
           </div>
 		  
