--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -117,6 +117,18 @@
       class="max-w-7xl mx-auto px-4 py-2 flex flex-col md:flex-row gap-4 md:space-x-4 md:sticky md:top-14 z-50"
     >
 	
+		<button
+        class="csv-btn"
+        data-csv="cards_eaigc.csv"
+        data-navtext
+        data-en="東亞遊戲慶典-台灣團隊列表"
+        data-zh="東亞遊戲慶典-台灣團隊列表"
+        data-ja="東亞遊戲慶典-台灣團隊列表"
+      >
+        東亞遊戲慶典-台灣團隊列表
+      </button>
+
+	
       <button
         class="csv-btn"
         data-csv="cards2.csv"
@@ -163,16 +175,6 @@
       >
         海外友商steam列表
 
-      <button
-        class="csv-btn"
-        data-csv="cards.csv"
-        data-navtext
-        data-en="2025 Taipei Game Show - Taiwan Games"
-        data-zh="2025台北電玩展-台灣遊戲列表"
-        data-ja="2025台ペイゲームショー - 台湾ゲーム一覧"
-      >
-        2025台北電玩展-台灣遊戲列表
-      </button>
 
     </div>
 
