--- a/IndieGameTW/IndieGameTW.html
+++ b/IndieGameTW/IndieGameTW.html
@@ -108,27 +108,26 @@
         </div>
       </div>
     </div>
+	
     <!-- 為固定頂部導覽留出空間 -->
     <div style="height: 60px;"></div>
+		<div class="max-w-7xl mx-auto mt-4 px-4">
+	  <a href="https://www.indiegametw.com/" target="_blank" rel="noopener noreferrer">
+		<img
+		  src="new_site2.jpg"
+		  alt="活動橫幅"
+		  class="w-full h-auto rounded-2xl shadow-lg hover:opacity-90 transition duration-200"
+		/>
+	  </a>
+	</div>
+
 
     <!-- CSV 按鈕區 -->
     <div
       id="csv-buttons"
       class="max-w-7xl mx-auto px-4 py-2 flex flex-col md:flex-row gap-4 md:space-x-4 md:sticky md:top-14 z-50"
     >
-	
-		<button
-        class="csv-btn"
-        data-csv="cards_eaigc.csv"
-        data-navtext
-        data-en="東亞遊戲慶典-台灣團隊列表"
-        data-zh="東亞遊戲慶典-台灣團隊列表"
-        data-ja="東亞遊戲慶典-台灣團隊列表"
-      >
-        東亞遊戲慶典-台灣團隊列表
-      </button>
-
-	
+		
       <button
         class="csv-btn"
         data-csv="cards2.csv"
